Fix navbar-toggle not visible on mobile

--- a/src/styles/_welcome.sass
+++ b/src/styles/_welcome.sass
@@ -13,6 +13,14 @@
 		.navbar-container
 			+container-behavior
 
+		.navbar-toggle
+			border: 2px solid $color-text-dark-primary
+			color: $color-text
+
+		.navbar-nav
+			+media-xs
+				padding: 10px
+
 	#page-header
 		+media-lg
 			min-height: 600px
